--- a/scss/_type.scss
+++ b/scss/_type.scss
@@ -787,11 +787,15 @@
     display: none;
     position: absolute;
     width: 800px;
-    height: 360px;
+    height: auto;
     left: 50%;
     transform: translateX(-50%);
     top: 200px;
     z-index: 20;
+    border: solid 1px #3aad1b;
+    border-radius: 3px;
+    box-shadow: 0px 0px 10px 2px #517b09;
+
 
     &.display {
         display: block;
@@ -801,46 +805,50 @@
     .signupbar {
         width: 100%;
         height: 50px;
-        background: #2a2a2a;
+        background: #242424;
         border-radius: 3px 3px 0px 0px;
+        border-bottom: solid 1px #3aad1b;
         position: relative;
 
         span {
             font-size: 17px;
-            color: #fff;
+            color: #4be119;
             line-height: 54px;
             padding-left: 20px;
         }
 
         //上XX
         button {
-            width: 18px;
-            height: 18px;
             position: absolute;
-            right: 20px;
-            top: 16px;
-            background: transparent;
+            width: 40px;
+            height: 40px;
+            border-radius: 40px;
+            background: #404040;
+            border: solid 3px #4be119;
+            right: -50px;
+            top: -50px;
+            box-shadow: 0px 0px 0px 5px #404040;
 
             &::before {
                 content: "";
-                width: 1px;
-                height: 18px;
-                background: #fff;
                 position: absolute;
-                left: 8px;
-                top: 0px;
+                width: 3px;
+                height: 18px;
+                right: 16px;
+                top: 8px;
+                background: #4be119;
                 transform: rotate(45deg);
             }
 
             &::after {
                 content: "";
-                width: 1px;
-                height: 18px;
-                background: #fff;
                 position: absolute;
-                left: 8px;
-                top: 0px;
-                transform: rotate(135deg);
+                width: 3px;
+                height: 18px;
+                left: 16px;
+                top: 8px;
+                background: #4be119;
+                transform: rotate(-45deg);
             }
         }
     }
@@ -849,7 +857,7 @@
     .signupbox {
         width: 100%;
         height: 265px;
-        background: #747474;
+        background: #242424;
         border-radius: 0px 0px 3px 3px;
         padding: 20px 0px;
 
@@ -874,13 +882,18 @@
                 padding: 3px 0px 3px 10px;
                 float: right;
                 margin: 7px 10px 0px 0px;
-                border: 1px solid #b9bfdc;
-                border-radius: 4px;
+                border-style: solid;
+                border-width: 1px;
+                border-color: transparent #3c3c3c #6c6c6c #3c3c3c;
+                border-radius: 5px;
+                background: linear-gradient(to bottom,#0f0f0f 21%,#303030 100%);
+                box-shadow: 0px 1px 0px 0px #3c3c3c;
+                color: #fff;
             }
 
             span {
                 line-height: 50px;
-                color: #fff;
+                color: #c8c8c8;
                 padding-left: 40px;
             }
 
@@ -888,28 +901,30 @@
                 width: 180px;
                 height: 36px;
                 margin-right: 10px;
-                background: linear-gradient(to bottom, #ffffff 0%, #d5d9ef 100%);
-                background-color: #d5d9ef;
-                border: 1px solid #495cc5;
-                color: #4d515d;
+                background: #2d2d2d;
+                border: 1px solid #d9d9d9;
+                color: #b2b2b2;
                 border-radius: 5px;
                 font-size: 16px;
                 font-weight: bold;
-                color: #4d515d;
-                &:hover,&:active,&.active {
-                    background: linear-gradient(to top, #ffffff 0%, #d5d9ef 100%);
-                }
+
                 &:last-child {
                     margin: 0px;
-                    background: linear-gradient(to top, #3247b8 0%, #8e9bdc 100%);
-                    color: #fff;
-                    /*for IE 9*/
-                    @media all and (min-width:0\0) and (min-resolution:.001dpcm){
-                        color: #4d515d;
-                    }
+                    color: #1c1c1c;
+                    background: linear-gradient(to right,#92e820 0%,#46dd16 100%);
+                    border-color: #6a8e2a;
+
                     &:hover,&:active,&.active {
-                        background: linear-gradient(to bottom, #3247b8 0%, #8e9bdc 100%);
+                        background: linear-gradient(to top, #4daa03 0%, #24700c 100%);
+                        color: #f4f4f4;
+                        border-color: #6a8e2a;
                     }
+                }
+
+                &:hover,&:active,&.active {
+                    background: linear-gradient(to top, #2d2d2d 0%, #1a1a1a 99%);
+                    border-color: #2b7d16;
+                    color: #46d317;
                 }
             }
         }
@@ -1346,11 +1361,13 @@
 
                     &.decideBtn {
                         width: 176px;
-                        color: #1c1c1c;
-                        background: linear-gradient(to right,#92e820 0%,#46dd16 100%);
+                        background: linear-gradient(to right,#57b21a 0%,#349a14 100%);
+                        color: #191919;
+                        border-color: #aef156;
                         &:hover,&:active,&.active {
-                            background: linear-gradient(to top, #4daa03 0%, #24700c 100%);
-                            color: #f4f4f4;
+                            background: linear-gradient(to top, #2d2d2d 0%, #1a1a1a 99%);
+                            color: #46d317;
+                            border-color: #2b7d16;
                         }
                     }
                 }
@@ -1520,10 +1537,11 @@
     position: fixed;
     margin: 0px 0px 0px 280px;
     bottom: 0px;
-    background: #828282;
+    background: #3a3a3a;
     border-radius: 3px 3px 0px 0px;
     z-index: 10;
     transition: 0.5s all;
+    border: solid 1px #2fac17;
 
     &.display {
         display: block;
@@ -1555,12 +1573,12 @@
         float: left;
         width: 24px;
         height: 24px;
-        background: #fff;
+        background: linear-gradient(to right,#a1ea22 0%,#34da14 100%);
         border-radius: 3px;
         margin: 13px 0px 0px 40px;
         line-height: 28px;
         font-size: 17px;
-        color: #850004;
+        color: #161616;
         position: relative;
         text-align: center;
 
@@ -1584,7 +1602,7 @@
         span {
             float: left;
             margin: 18px 0px 0px 10px;
-            color: #fff;
+            color: #4fde17;
             font-size: 16px;
         }
     }
@@ -1601,14 +1619,16 @@
 
     //投注內容
     .bettingbox {
-        width: 100%;
+        width: calc(100% + 2px);
         height: 0px;
-        background: #ababab;
-        border: solid 2px #828282;
+        background: #2f2f2f;
+        border: solid 1px #33bc19;
+        border-top-color: #7b7b7b;
         box-sizing: border-box;
-        border-width: 0px 2px;
         overflow: hidden;
         transition: 0.5s all;
+        position: absolute;
+        left: -1px;
 
         //table視窗
         .bettingwindow {
@@ -1622,14 +1642,14 @@
                 width: 5px;
                 background-color: transparent;
             }
-
+        
             &::-webkit-scrollbar-track {
-                background: #f1f1f1;
+                background: #121212;
                 border-radius: 10px;
             }
-
+        
             &::-webkit-scrollbar-thumb {
-                background: #b9becf;
+                background: #606360;
                 border-radius: 10px;
             }
             
@@ -2509,16 +2529,16 @@
             width: 180px;
             height: 36px;
             margin-top: 30px;
-            background: #2d2d2d;
-            border: 1px solid #d9d9d9;
-            color: #b2b2b2;
+            color: #191919;
+            background: linear-gradient(to right,#57b21a 0%,#349a14 100%);
+            border: solid 1px #aef156;
             border-radius: 5px;
             font-size: 16px;
             font-weight: bold;
             &:hover,&:active,&.active {
-                background: linear-gradient(to right, #92e820 0%, #46dd16 100%);
-                color: #191919;
-                border-color: #aef156;
+                background: linear-gradient(to top, #2d2d2d 0%, #1a1a1a 99%);
+                color: #46d317;
+                border-color: #2b7d16;
             }
         }
     }
